[package]
name = "flags"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "flags_basic"
path = "examples/flags_basic.rs"

[[example]]
name = "flags_userdefined"
path = "examples/flags_userdefined.rs"
